<resources>
    <string name="app_name">SapiAdvertiser</string>
    <string name="post_title">Please add a title for post.</string>
    <string name="post_author">Poster</string>
    <string name="post_description">Please give a description for your post.</string>
    <string name="post_time">Time of event</string>
    <string name="post_date">Date of event</string>
    <string name="post_place">Place of event</string>
    <string name="post_price">Price</string>
    <string name="post_short">Please give a short description.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_event_details">EventDetailsActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="signinfail">Error: sign in failed.</string>
    <string name="signinsuccess">User ID:</string>
    <string name="Registration">Sign Up</string>
</resources>
