<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_post_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/post_title"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_writer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tv_post_title"
                android:text="@string/post_author" />

            <TextView
                android:id="@+id/tv_descShort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tv_writer"
                android:text="@string/post_short" />

            <TextView
                android:id="@+id/tv_post_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/tv_post_title"
                android:text="@string/post_date" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/tv_writer"
                android:text="@string/post_place" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_post_images"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tv_descShort" >

            </android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/tv_post_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/rv_post_images"
                android:layout_weight="1"
                android:text="@string/post_price"
                android:textAlignment="viewEnd" />

        </RelativeLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>
