<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewPostActivity">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_submit_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        android:src="@drawable/ic_navigation_check_24"
        app:backgroundTint="@android:color/holo_green_dark" />

    <EditText
        android:id="@+id/postTitle"
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/post_title"
        android:textColorLink="@color/textEditUnderLine"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/postDescription"
        android:layout_width="346dp"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="96dp"
        android:background="@null"
        android:gravity="top|left"
        android:hint="@string/post_description"
        android:inputType="textMultiLine"
        android:lines="6"
        android:overScrollMode="always"
        android:scrollHorizontally="false"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/postTime"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/fab_submit_post"
        android:layout_below="@+id/postDescription"
        android:clickable="true"
        android:editable="false"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/post_time"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/postDate"
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/postTitle"
        android:layout_below="@+id/postDescription"
        android:clickable="true"
        android:editable="false"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/post_date"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/postPlace"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/fab_submit_post"
        android:layout_centerVertical="true"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:hint="@string/post_place"
        android:clickable="true"
        android:focusable="false"
        android:editable="false"
        android:inputType="textPersonName" />

</RelativeLayout>